# todoli

./: .gitignore  Cargo.toml  README.md  todos.db  todos.session.sql
migrations/2024-04-15-194819_create_todos_table/: up.sql
src/: error.rs  main.rs  prelude.rs
src/actions/: add_todo.rs  complete_todo.rs  list_todos.rs  mod.rs  quit.rs
src/storage/: mod.rs
src/storage/models/: todo.rs
src/storage/schema/: mod.rs
