[package]
name = "todoli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.5", features = ["sqlite"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
inquire = "0.7.4"
thiserror = "1.0.58"
tokio = "1.37.0"

[dev-dependencies]
anyhow = "1.0.82"

